apps/overlays/staging/vikunja/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vikunja-ingress
  namespace: vikunja
spec:
  endpointSelector: {}
  ingress:
    # Allow all intra-namespace traffic (vikunja <-> cnpg db)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vikunja
    # Allow Traefik to reach the vikunja pod
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            k8s:app.kubernetes.io/name: traefik
    # Allow Prometheus to scrape metrics
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: prometheus
